adding message-display

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,8 @@
 <main class="main">
   <h1>my-sms-messenger</h1>
   <app-message-form />
+  <hr />
+  <app-message-display />
 </main>
 
 <router-outlet />
