semi-working message display

--- a/src/app/message-display/message-display.html
+++ b/src/app/message-display/message-display.html
@@ -1,3 +1,9 @@
 <section>
-  message-display works!
+
+  @for ( message of messages; track message["_id"] ) {
+    <aside>to: {{ message["to"] }}</aside>
+    <aside>{{ message["content"] }}</aside>
+    <aside>sent at {{ message["created_at"] }}</aside>
+  }
+
 </section>
