trying to figure out why component is not populating after subscribe()

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,9 @@
-<main class="main">
-  <h1>my-sms-messenger</h1>
-  <app-messages />
-</main>
 
-<router-outlet />
+<router-outlet>
+
+  <main class="main">
+    <h1>my-sms-messenger</h1>
+    <app-messages />
+  </main>
+
+</router-outlet>
